--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <section class="hero">
             <div class="hero-content">
                 <div class="love-message">
+                    <img src="ss.jpg" alt="Love" class="love-image">
                     <h1 class="tr">CANSU SENİ SEVİYORUM</h1>
                     <h1 class="en" style="display: none;">CANSU I LOVE YOU</h1>
                 </div>
