--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                 download: "İndir",
                 hero_title: "HolyGPT ile<br>Manevi Yolculuğunuzu Aydınlatın",
                 hero_subtitle: "Kutsal metinleri keşfedin, Tefe'ül yoluyla günlük rehberlik alın ve HolyGPT'nin yapay zeka destekli manevi içgörülerini keşfedin.",
-                app_store: "App Store",
+                app_store: "App Store(yakında)",
                 google_play: "Google Play",
                 app_store_soon: "App Store (yakında)",
                 features_title_1: "4 dilde kullanılabilir",
@@ -540,7 +540,7 @@
                 download: "Herunterladen",
                 hero_title: "Erhellen Sie Ihre spirituelle Reise<br>mit HolyGPT",
                 hero_subtitle: "Entdecken Sie heilige Texte, suchen Sie täglich Führung durch Stichomantie und erkunden Sie KI-gestützte spirituelle Einblicke mit HolyGPT.",
-                app_store: "App Store",
+                app_store: "App Store(bald)",
                 google_play: "Google Play",
                 app_store_soon: "App Store (bald)",
                 features_title_1: "In 4 Sprachen verfügbar",
