--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             <div class="nav-links">
                 <a href="#home">Home</a>
                 <a href="#features">Features</a>
-                <a href="#experience">Overview</a>
                 <a href="#contact">Contact</a>
                 <a href="#download">Download</a>
                 <div class="language-selector">
@@ -157,88 +156,6 @@
                     </div>
                     <h3>HolyGPT</h3>
                     <p>An AI assistant specially trained on all religions and beliefs.</p>
-                </div>
-            </div>
-        </section>
-
-        <section id="experience" class="experience">
-            <div class="overview-section">
-                <div class="nav-arrow left">
-                    <i class="fas fa-chevron-left fa-2x"></i>
-                </div>
-                <div class="overview-content active" id="overview-1">
-                    <div class="triple-showcase">
-                        <div class="phone-mockup side-left">
-                            <img src="screens/en/kuran.png" alt="Kuran" class="main-screen">
-                        </div>
-                        <div class="phone-mockup center">
-                            <img src="screens/en/main.png" alt="Main Screen" class="main-screen">
-                        </div>
-                        <div class="phone-mockup side-right">
-                            <img src="screens/en/incil.png" alt="İncil" class="main-screen">
-                        </div>
-                    </div>
-                    <div class="overview-text">
-                        <h2>Read and Explore Every Word</h2>
-                        <p>Access full-text sacred scriptures without limitations. Read, search, and reflect on divine
-                            wisdom in its entirety.</p>
-                    </div>
-                </div>
-
-                <div class="overview-content" id="overview-2">
-                    <div class="app-showcase">
-                        <div class="phone-mockup">
-                            <img src="screens/en/chat.png" alt="HolyGPT Chat" class="main-screen">
-                        </div>
-                    </div>
-                    <div class="overview-text">
-                        <h2>HolyGPT – Ask About Any Faith</h2>
-                        <p>Engage in deep conversations with our AI assistant, designed to discuss all religions and
-                            spiritual beliefs with knowledge and insight.</p>
-                    </div>
-                </div>
-
-                <div class="overview-content" id="overview-3">
-                    <div class="double-showcase">
-                        <div class="phone-mockup left">
-                            <img src="screens/en/magic_incil.png" alt="Magic İncil" class="main-screen">
-                        </div>
-                        <div class="phone-mockup right">
-                            <img src="screens/en/incil_page.png" alt="İncil Page" class="main-screen">
-                        </div>
-                    </div>
-                    <div class="overview-text">
-                        <h2>Bibliomancy – Daily Divine Guidance</h2>
-                        <p>Seek inspiration through bibliomancy and receive a daily sacred text for reflection and
-                            spiritual insight.</p>
-                    </div>
-                </div>
-
-                <div class="overview-content" id="overview-4">
-                    <div class="double-showcase">
-                        <div class="phone-mockup left">
-                            <img src="screens/en/magic_kuran.png" alt="Magic Kuran" class="main-screen">
-                        </div>
-                        <div class="phone-mockup right">
-                            <img src="screens/en/kuran_page.png" alt="Kuran Page" class="main-screen">
-                        </div>
-                    </div>
-                    <div class="overview-text">
-                        <h2>Bibliomancy – Daily Divine Guidance</h2>
-                        <p>Seek inspiration through bibliomancy and receive a daily sacred text for reflection and
-                            spiritual insight.</p>
-                    </div>
-                </div>
-
-                <div class="nav-arrow right">
-                    <i class="fas fa-chevron-right fa-2x"></i>
-                </div>
-
-                <div class="overview-dots">
-                    <span class="overview-dot active"></span>
-                    <span class="overview-dot"></span>
-                    <span class="overview-dot"></span>
-                    <span class="overview-dot"></span>
                 </div>
             </div>
         </section>
@@ -512,7 +429,7 @@
                 download: "İndir",
                 hero_title: "HolyGPT ile<br>Manevi Yolculuğunuzu Aydınlatın",
                 hero_subtitle: "Kutsal metinleri keşfedin, Tefe'ül yoluyla günlük rehberlik alın ve HolyGPT'nin yapay zeka destekli manevi içgörülerini keşfedin.",
-                app_store: "App Store(yakında)",
+                app_store: "App Store",
                 google_play: "Google Play",
                 app_store_soon: "App Store (yakında)",
                 features_title_1: "4 dilde kullanılabilir",
@@ -541,7 +458,7 @@
                 download: "Herunterladen",
                 hero_title: "Erhellen Sie Ihre spirituelle Reise<br>mit HolyGPT",
                 hero_subtitle: "Entdecken Sie heilige Texte, suchen Sie täglich Führung durch Stichomantie und erkunden Sie KI-gestützte spirituelle Einblicke mit HolyGPT.",
-                app_store: "App Store(bald)",
+                app_store: "App Store",
                 google_play: "Google Play",
                 app_store_soon: "App Store (bald)",
                 features_title_1: "In 4 Sprachen verfügbar",
@@ -621,7 +538,6 @@
             // Navigation linkleri
             document.querySelector('a[href="#home"]').textContent = translations[currentLang].home;
             document.querySelector('a[href="#features"]').textContent = translations[currentLang].features;
-            document.querySelector('a[href="#experience"]').textContent = translations[currentLang].overview;
             document.querySelector('a[href="#contact"]').textContent = translations[currentLang].contact;
             document.querySelector('a[href="#download"]').textContent = translations[currentLang].download;
 
