--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                 download: "Download",
                 hero_title: "Enlighten Your Spiritual Journey<br>with HolyGPT",
                 hero_subtitle: "Discover sacred texts, seek daily guidance through bibliomancy, and explore AI-powered spiritual insights with HolyGPT.",
-                app_store: "App Store",
+                app_store: "App Store (soon)",
                 google_play: "Google Play",
                 app_store_soon: "App Store (soon)",
                 features_title_1: "Available in 4 languages",
