--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
             </div>
             <div class="footer-links">
                 <a href="mailto:support@holy-gpt.com">support@holy-gpt.com</a>
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Use</a>
+                <a href="privacy.html">Privacy Policy</a>
+                <a href="terms.html">Terms of Use</a>
             </div>
         </div>
         <div class="footer-bottom">
