--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                         <i class="fab fa-apple"></i>
                         <span>App Store (soon)</span>
                     </a>
-                    <a href="#" class="store-button">
+                    <a href="https://play.google.com/store/apps/details?id=com.holygpt.holygpt" class="store-button"
+                        target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-google-play"></i>
                         <span>Google Play</span>
                     </a>
